syntax = "proto3";
package delta.kernel;

option java_package = "kernel.proto";
option java_outer_classname = "FunctionRegistryProtos";

import "schema.proto";

// =============================================================================
// Kernel-Defined Functions
// =============================================================================

// Identifiers for kernel-defined functions
// These are filters/transforms implemented in kernel-rs
enum KernelFunctionId {
  KERNEL_FUNCTION_UNSPECIFIED = 0;
  
  // Deduplication filters
  ADD_REMOVE_DEDUP = 1;      // Dedup add/remove actions during commit log replay
  CHECKPOINT_DEDUP = 2;       // Dedup for checkpoint file processing
  
  // Future functions can be added here
}

// Metadata about a kernel-defined function
message KernelFunctionMetadata {
  KernelFunctionId id = 1;
  string name = 2;
  string description = 3;
  Schema input_schema = 4;    // Expected input columns
  Schema output_schema = 5;   // Output columns (for transforms)
  bool is_filter = 6;         // True if function produces selection vector
  bool is_transform = 7;      // True if function transforms data
  bool requires_state = 8;    // True if function needs cross-batch state
}

// Registry of all available kernel functions
message FunctionRegistry {
  repeated KernelFunctionMetadata functions = 1;
}

